# HepEVD

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  get_extern_deps.sh  hep_evd.h  hep_evd.hpp
.github/: format.sh
.github/workflows/: build_examples.yml  formatting.yml  static.yml  wheels.yml
example/: Makefile  basic.cpp  client.cpp  debugging.cpp  hits.cpp  python_debug.py  server.cpp  test_python_bindings.py
include/: base_helper.h  config.h  geometry.h  hits.h  image.h  larsoft_helpers.h  marker.h  pandora_helpers.h  particle.h  server.h  state.h  traccc_helpers.h  utils.h
integrations/: VisualMonitoringAlgorithm.cc
python_bindings/: CMakeLists.txt  MANIFEST.in  README.md  basic_hep_evd_bindings.cpp  hep_evd_bindings.cpp  pyproject.toml  setup.py
python_bindings/bindings/: array_list_utils.cpp  basics.cpp
python_bindings/include/: convertors.hpp  detectors.hpp
python_bindings/pybind11/: basics.cpp
python_bindings/src/: HepEVD.cpp  array_list_utils.cpp  geometry.cpp  graph.cpp  hits.cpp  markers.cpp  particles.cpp
python_bindings/src/HepEVD/: __init__.py
python_bindings/src/include/: array_list_utils.hpp  global.hpp  graph.hpp  hits.hpp
web/: camera_and_controls.js  colourmaps.js  constants.js  data_loader.js  filters.js  helpers.js  hep_evd.css  hep_evd.js  hit_data_state.js  hit_type_state.js  hits.js  index.html  interactions.js  marker_data_state.js  markers.js  mc_data_state.js  particle_data_state.js  particle_menu.js  render_state.js  rendering.js  states.js  ui.js
